hphp/hack/test/typecheck/unpack_call4.php
<?hh

function f(string $foo): void {}

function test(): void {
  $args = array();
  // arity error
  f('string', ...$args);
}
